todo_backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todobackend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todobackend
  template:
    metadata:
      labels:
        app: todobackend
    spec:
      containers:
        - name: todobackend
          image: markokoskinen2019/dwk-todobackend:v15
