todo_backend/manifests/mainapp_backend_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: todobackend-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: todobackend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todobackend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todobackend
  template:
    metadata:
      labels:
        app: todobackend
    spec:
      containers:
        - name: todobackend
          image: markokoskinen2019/dwk-todobackend:v17
          resources:
            limits:
              cpu: "250m"
              memory: "50Mi"
