todo_backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todobackend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todobackend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3002
